# EccodesAndGribs

./: .gitignore  CMakeLists.txt  Reaad.cpp  Write.cpp  main.cpp  main_copy.cpp
include/: eccodes_config.h  eccodes_ecbuild_config.h  eccodes_version.h
lib/: eccodes.lib
lib/cmake/eccodes/: eccodes-config-version.cmake  eccodes-config.cmake  eccodes-targets-release.cmake  eccodes-targets.cmake
lib/pkgconfig/: eccodes.pc
